• Added in sort for Status and time created 	• Updated the sort but then this error was firing:
	    db.all(sql, [], function(err, rows) {
	      if(err){
	        return res.send('There was an error');
	      }
		○ Then updated the error message to show more in the console because I actually don’t know how to fix that based on the error message alone
	• Updated column dateCreated to date_created to be in snake case with rest of headings
Added mark as closed button in the actions column

--- a/public/hp-v1.html
+++ b/public/hp-v1.html
@@ -91,7 +91,7 @@
                     <tr>
                       <td><a href="/viewrisk?id=${risk.id}">${risk.id}</a></td>
                       <td>${risk.name}</td>
-                      <td>${risk.dateCreated}</td>
+                      <td>${risk.date_created}</td>
                       <td><span class="status-colour bg-${getStatusColour(risk.risk_status)}">${risk.risk_status}</span></td>
                       <td><span class="level-colour bg-${getLevelColour(risk.risk_level)}">${risk.risk_level}</span></td>
                       <td>${risk.assigned_to_name}</td>
