--- a/public/hp-v2.html
+++ b/public/hp-v2.html
@@ -69,9 +69,9 @@
                     <!-- SORTING INPUT FIELD -->
                     <!--template literals/ternary operators change placeholder view of input field to match selected view-->
                     <!-- ie if selected option matches, show selected option-->
-                    <form method="get" action="/home" class="sort-dropdown mb-4 me-3">
-                    <label for="sort" class="form-label">Sort by:</label>
-                    <select name="sort" id="sort" class="form-select" onchange="this.form.submit()">
+                    <form method="get" action="/home" class="d-flex align-items-center sort-dropdown mb-2">
+                        <label for="sort" class="me-2 mb-0" style="background-color: transparent;">Sort by:</label>
+                        <select name="sort" id="sort" class="form-select form-select-sm" onchange="this.form.submit()">
                         <!--<option value="" ${sort === '' || !sort ? 'selected' : ''}>By ID (default)</option>
                         <option value="level" ${sort === 'level' ? 'selected' : ''}>Risk Level (Critical to Low)</option>
                         <option value="name" ${sort === 'name' ? 'selected' : ''}>Risk name (A-Z)</option>
@@ -80,9 +80,9 @@
                         <option value="date_created" ${sort === 'date_created' ? 'selected' : ''}>Date Created (Newest to Oldest)</option>-->
                     </select>
                     </form>
-                    <table class="table table-bordered table-hover">
-                      <thead class="table-light">
-                        <tr>
+                    <table class="table table-hover table-striped">
+                      <thead>
+                        <tr class="table-header">
                           <th>ID</th>
                           <th>Risk Name</th>
                           <th>Date Created</th>
