--- a/public/hp-v2.html
+++ b/public/hp-v2.html
@@ -39,7 +39,7 @@
                       <form class="d-flex w-100 search-bar-form" role="search" method="get" action="/search">
                           <div class="input-group w-100">
                               <input type="search" name="q" class="form-control" placeholder="Search..." aria-label="Search">
-                              <button class="btn btn-danger" type="submit">Search</button>
+                              <button class="btn search-button" type="submit">Search</button>
                           </div>
                     </form>
                   </div>
@@ -60,12 +60,12 @@
                 </div>
               </nav>
             <!--ADD RISK AND KANBAN BUTTONS-->
-              <a href="/add-risk" class="btn btn-primary m-3">+ Add New Risk</a>
-              <a href="/kanban" class="btn btn-outline-primary m-3">Kanban View</a>
+              <a href="/add-risk" class="btn add-new-risk m-3">+ Add New Risk</a>
+              <a href="/kanban" class="btn kanban-view m-3">Kanban View</a>
               <div class="table table-container">
                 <!--Risk table-->
-                <h1>Risks Table</h1>
-                <div class="table-responsive p-4">
+                <h1 class="text-center">Risks Dashboard</h1>
+                <div class="table-responsive">
                     <!-- SORTING INPUT FIELD -->
                     <!--template literals/ternary operators change placeholder view of input field to match selected view-->
                     <!-- ie if selected option matches, show selected option-->
@@ -83,7 +83,13 @@
                     <table class="table table-hover table-striped">
                       <thead>
                         <tr class="table-header">
-                          <th>ID</th>
+                          <th>ID
+                            <img 
+                                src="info-icon.png" 
+                                alt="Info" 
+                                title="View more details"
+                            >  
+                          </th>
                           <th>Risk Name</th>
                           <th>Date Created</th>
                           <th>Status</th>
@@ -103,7 +109,7 @@
                       <tbody>
                         <tr>
                           <td>
-                            <a href="/viewrisk?id=${risk.id}">${risk.id}</a>
+                            <a href="/viewrisk?id=${risk.id}" class="risk-id-link">${risk.id}</a>
                           </td>
                           <td>${risk.name}</td>
                           <td>${risk.date_created}</td>
